@@ -16,7 +16,7 @@ import org.ldaptive.ModifyRequest;
 import org.ldaptive.ResultCode;
 import org.ldaptive.ad.UnicodePwdAttribute;
 
-import java.util.Collections;
+import java.util.List;
 
 /**
  * This is {@link LdapPasswordSynchronizationAuthenticationPostProcessor}.
@@ -47,7 +47,7 @@ public class LdapPasswordSynchronizationAuthenticationPostProcessor implements A
         try {
             val credential = (UsernamePasswordCredential) primaryCredential.get();
             val filter = LdapUtils.newLdaptiveSearchFilter(ldapProperties.getSearchFilter(),
-                LdapUtils.LDAP_SEARCH_FILTER_DEFAULT_PARAM_NAME, Collections.singletonList(credential.getUsername()));
+                LdapUtils.LDAP_SEARCH_FILTER_DEFAULT_PARAM_NAME, List.of(credential.getUsername()));
             LOGGER.trace("Constructed LDAP filter [{}] to locate user and update password", filter);
 
             val response = searchFactory.executeSearchOperation(ldapProperties.getBaseDn(), filter, this.ldapProperties.getPageSize());
